--- a/1-node-farm/starter/templates/Template-card.html
+++ b/1-node-farm/starter/templates/Template-card.html
@@ -5,8 +5,12 @@
           </div>
 
           <div class="card__details">
-            <div class="card__detail-box{%NOT_ORGANIC%}">
+            <div class ="card_details-box {%NOT_ORGANIC%}">
+              <h6 class ="card__detail card__detail--organic">Organic!</h6>
+               <div class="card__detail-box">
               <h6 class="card__detail card__detail--organic">        {%QUANTITY%} per 📦</h6>
+            </div>
+
             </div>
 
             <div class="card__detail-box">
